--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "watch": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Renan Silveira",
@@ -16,5 +17,8 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
